package maidsafe.nfs.protobuf;
option optimize_for = LITE_RUNTIME;

message HandledRequest {
  required bytes message_id = 1;
  required int32 action = 2;
  required bytes data_name = 3;
  required int32 data_type = 4;
  required uint64 size = 5;
  optional int32 replication = 6;
  required bytes reply = 7;
}

message HandledRequests {
  required bytes name = 1;
  repeated HandledRequest handled_requests = 2;
}
